# miscellanea

./: .gitignore  CMakeLists.txt  LICENSE
cmake-cuda/: CMakeLists.txt  example.cu  testdot.cu
test_ofwrite/: CMakeLists.txt  write_array_to_text.cpp
test_ofwrite/include/: write_array_to_text.h
